feat: Update preferences and readings routes to handle new data structures and schemas
- Refactored preferences.ts to support new device preference structure and validation.
- Updated readings.ts to handle new reading data format with road jam percentages.
- Added scheduled processing for traffic predictions in scheduled.ts.
- Introduced new types for predictions in predictions.ts.
- Enhanced Zod schemas for device and reading validation in zod.ts.
- Created a test script for Gemini AI integration in test-gemini.ts.
- Updated TypeScript configuration and wrangler settings for scheduled triggers.

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "@google/genai": "^1.35.0",
     "@libsql/client": "^0.15.15",
+    "@openrouter/sdk": "^0.3.11",
     "drizzle-orm": "^0.44.7",
     "hono": "^4.10.7",
     "nanoid": "^5.1.6",
